--- a/watch-party/package.json
+++ b/watch-party/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "ably": "^1.2.5",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "vue-video-player": "^5.0.2"
