--- a/watch-party/package.json
+++ b/watch-party/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-fontawesome": "^0.4.0",
+    "videojs-youtube": "^2.6.1",
     "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
