--- a/watch-party/package.json
+++ b/watch-party/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.8.3",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
+    "mux.js": "^5.12.2",
     "nuxt": "^2.14.12",
     "nuxt-fontawesome": "^0.4.0",
     "videojs-youtube": "^2.6.1",
